--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 	<div class="row collapse" id="collapseRDN" style="background: rgb(250, 250, 250); padding-top: 10px; margin: 5px 0px 15px; border-radius: 7px;">
-		<div class="col-lg-4">
+		<div class="col-lg-3">
 			<div class="custom-control custom-radio border-bottom pb-1">
 				<!-- <input (change)="handleChange($event)" type="radio" id="customRadioZ1" name="customRadioZ01" class="custom-control-input"> -->
 				<label > {{"jobs.required" | translate }} </label>
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-4">	
+		<div class="col-lg-3">	
 			<div class="custom-control custom-radio border-bottom pb-1">
 				<!-- <input (change)="handleChange($event)"  type="radio" id="customRadioZ2" name="customRadioZ01" class="custom-control-input"> -->
 				<label >{{"jobs.desired" | translate }} </label>
@@ -88,7 +88,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-4">
+		<div class="col-lg-3">
 			<div class="custom-control custom-radio border-bottom pb-1">
 				<!-- <input (change)="handleChange($event)"  type="radio" id="customRadioZ3" name="customRadioZ01" class="custom-control-input"> -->
 				<label >{{"jobs.niceToHave" | translate }}  </label>
@@ -121,6 +121,17 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-lg-3">
+			<div class="custom-control custom-radio border-bottom pb-1">
+				<label >{{"shared.location" | translate }}  </label>
+			</div>
+			<div class="py-2" *ngIf="selectedJob?.job_locations">
+				<ng-container *ngFor="let items of selectedJob?.job_locations">
+					<button style="text-transform: capitalize;" type="button" (click)="filterCountry($event);"  class="btn btn-fltr btn-fltr-active" id="countrys_{{items?.city}}">
+					{{items?.city}} - {{items?.state}}</button>
+				</ng-container>
+			</div>
+		</div>
 	</div>
     <div class="row">
       <div class="col-lg-8 col-md-8 matches-8">
@@ -131,37 +142,6 @@
               </div>
             </div>
           </div> 
-        <!-- <div class="row">
-          <div class="col-lg-5">
-            <form class="form-inline">
-              <div class="form-group mr-2">
-              <label>{{"dashboard.sortBy" | translate}} : </label>
-              </div>
-              <div class="form-group">
-              <select class="form-control form-control-sm">
-                <option>Latest</option>
-                <option>Top Matches</option>
-              </select>
-              </div>
-            </form>
-          </div>
-          <div class="col-lg-5">
-            <form class="form-inline">
-              <div class="form-group mr-2">
-              <label>{{"dashboard.filter" | translate}} : </label>
-              </div>
-              <div class="form-group">
-              <select class="form-control form-control-sm">
-                <option hidden>{{"common.select" | translate}}</option>
-                <option value="avail">Availability</option>
-                <option value="reloc">Relocation</option>
-                <option value="trav">Travel</option>
-                <option value="job">Job Type</option>
-              </select>
-              </div>
-            </form>
-          </div>
-        </div> -->
         <ng-container *ngIf="userList?.length; else elseTemplate">
           <div class="row mt-4 mb-4" *ngFor="let item of userList; let i=index">
             <div class="col-lg-12">
@@ -169,11 +149,12 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-lg-7 col-md-5">
-                      <a href="javascript:;" [routerLink]="['/employer/job-candidate-matches/details/view']" [queryParams]="{jobId: selectedJob?.id, userId: item?.id}">
-                        <h5 class="text-capitalize">
+                      <a href="javascript:;" [routerLink]="['/employer/job-candidate-matches/details/view']" [queryParams]="{jobId: selectedJob?.id, userId: item?.id, location_id: selectedJob?.job_location?.id}">
+                        <h5 class="text-capitalize"> 
                           <span>{{(item?.first_name ? item?.first_name : '') + ' ' + (item?.last_name ? item?.last_name : '')}}</span>
                           <small *ngIf="item?.job_role"> - {{item?.job_role}}</small>
-                          <span *ngIf="!utilsHelperService.isEmptyObj(item?.job_application)" class="badge badge-success applied-badge ml-1" style="font-size: 11px;padding: 3px 6px;">{{ item?.job_application?.status == 7 ? 'Pending' : 'Applied'}}</span>
+                          <span *ngIf="!utilsHelperService.isEmptyObj(item?.job_application) && item?.job_application?.status != 2 " class="badge badge-success applied-badge ml-1" style="font-size: 11px;padding: 3px 6px;">{{ item?.job_application?.status == 7 ? 'Pending' : 'Applied'}}</span>
+                          <span *ngIf="!utilsHelperService.isEmptyObj(item?.job_application) && item?.job_application?.status == 2 " class="badge badge-success applied-badge ml-1" style="font-size: 11px;padding: 3px 6px;"> {{"shared.hired" | translate}} </span>
                         </h5>
                         <!-- <h6> -->
 
@@ -228,16 +209,8 @@
                        Availability: {{(item?.availability || item?.availability == 0) ? (item?.availability == 0 ? 'Immediate' : item?.availability + ' Days') : '--'}}
                       </h6>
                       <div class="mt-2">
-						<!-- <ng-container *ngIf="item?.hands_on_experience?.length; else elseHandsTemplate">
-							<ng-container *ngFor="let items of item?.hands_on_experience; let i = index" >
-								<span class="sap-badge"> {{items?.skill_id ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(items?.skill_id)?.tag) : '--'}} </span>
-							</ng-container>
-						</ng-container>
-						<ng-template #elseHandsTemplate>
-							<span  class="sap-badge">--</span>
-						</ng-template> -->
                         <ng-container *ngFor="let itemSub of filterData(item?.skills)">
-                          <span *ngIf="itemSub" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub)?.tag)}}</span>
+                          <span *ngIf="itemSub && utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub)?.tag) != '--' " class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub)?.tag)}}</span>
                         </ng-container>
                       </div>
                     </div>
@@ -257,49 +230,7 @@
     [pageIndex]="page-1">
 </mat-paginator>
 </div>
-        <!-- <div class="d-flex justify-content-center" *ngIf="((userMeta?.count > 0 && userMeta?.total > 25) && (userMeta?.total != userList?.length))">
-          <button (click)="onLoadMoreJob()" class="btn btn-theme-blue" type="button">
-            Load More
-          </button>
-        </div> -->
-        <!-- <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="javascript:;" [routerLink]="['/employer/job-candidate-matches']" >
-                      <h5>Jacky Smith <small> - Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right mt-3">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a (click)="onToggleResumeForm(true)" class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
-                      <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate}}</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a (click)="onToggleSendMail(true)"  class="btn btn-outline-orange btn-sm" href="javascript:;">
-                      <i class="fas fa-paper-plane"></i> {{"dashboard.mail" | translate}}</a>
-                    </span>
-                  </div>
-                  <div class="save-icon active mt-1" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img.jpg">
-                  <div class="media-body">
-                    <h6>8 Yrs Experience, H1B</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span> <span class="sap-badge">SAP FSCM</span>  <span class="sap-badge">SAP Mobility</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      </div>
+    </div>
 
       <!--Side Bar Section-->
       <div class="col-lg-4 col-md-4 matches-4">
@@ -349,14 +280,7 @@
               </ul>
             </div>
           </div>
-          <!-- <div class="card mt-4">
-            <div class="card-header" data-toggle="collapse" data-target="#collapseSalary" aria-expanded="false" aria-controls="collapseSalary">
-              Salary  <i class="fas fa-angle-down float-right pt-1"></i>
-            </div>
-            <div [ngClass]="{'show': (queryParams?.min_experience && queryParams?.max_experience)}" class="card-body p-3 collapse multi-collapse" id="collapseSalary">
-              <ngx-slider (userChangeEnd)="onChangeEve($event)" [(value)]="minValue" [(highValue)]="maxValue" [options]="options"></ngx-slider>
-            </div>
-          </div> -->
+         
           <div class="card mt-4">
             <div class="card-header" data-toggle="collapse" data-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
              {{"shared.sapSkills" | translate }}    <i class="fas fa-angle-down float-right pt-1"></i>
