--- a/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
@@ -3,11 +3,12 @@
     <div class="row mb-5">
       <div class="col-lg-12">
         <div class="matching-post" *ngIf="showCount && showJob">
-              <ng-container  *ngFor="let item of postedJobs; let i = index" >
-          <div   *ngIf="checkDataCount(item?.id) != 0 && checkDataCount(item?.id) != '0'"   class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-            <input  (change)="onSetJob(item)" class="custom-control-input  mb-0" type="radio" id="Check_{{i}}" name="example1_{{selectedJob?.id}}_{{item?.id}}" [checked]="(selectedJob?.id == item?.id)">
-            <label class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}}  ({{ checkDataCount(item?.id)}}) <!--  {{ selectedJob?.id == item?.id ? (shortListedMeta?.total ?  '(' + shortListedMeta?.total + ')' :  '(' +0+ ')') : ''}}  --></label>
-          </div>
+              <ng-container *ngFor="let item of postedJobs; let i = index"  >
+          <div *ngIf="checkDataCount(item?.id) != 0 && checkDataCount(item?.id) != '0'"  class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
+            <input (change)="onSetJob(item)" class="custom-control-input  mb-0" type="radio" id="Check_{{i}}" name="example1_{{selectedJob?.id}}_{{item?.id}}" [checked]="(selectedJob?.id == item?.id)">
+            <label  class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}} ({{ checkDataCount(item?.id)}}) </label>
+			<!--  {{ selectedJob?.id == item?.id ? (appliedJobMeta?.total ?  '(' + appliedJobMeta?.total + ')' :  '(' +0+ ')') : ''}} -->
+			</div>
 			</ng-container>
         </div>
       </div>
@@ -26,7 +27,8 @@
               <th scope="col">{{"tabs.jobDetails" | translate}}</th>
               <th scope="col">{{"shared.status" | translate}}</th>
               <th scope="col">{{"tabs.message" | translate}}</th>
-             <!--  <th scope="col" class="text-center">{{"dashboard.action" | translate}}</th> -->
+              <th scope="col" class="text-center">{{"common.inviteLink" | translate}}</th>
+              <th scope="col" class="text-center">{{"common.history" | translate}}</th>
             </tr>
             </thead>
             <tbody>
@@ -42,22 +44,17 @@
                   </td>
                   <td>{{item?.user?.phone ? (item?.user?.phone | phone) : '--'}}</td>
                   <td>{{item?.user?.email ? item?.user?.email : '--'}}</td>
-                  <!-- <td class="text-capitalize">
-                    {{item?.user?.city ? item?.user?.city + ', ' : ''}}
-                    {{item?.user?.state ? item?.user?.state + ', ' : ''}}
-                    <span class="text-uppercase">
-                      {{item?.user?.country ? item?.user?.country : ''}}
-                      </span>
-                  </td> -->
+                  
 				  <td class="text-capitalize">
 				  {{selectedJob.title}}
+				  <!-- <span style="font-size: 11px;color: blue;"> ( {{checkCity(item,'city')}} - {{checkCity(item,'state')}} )</span> -->
 				  </td>
 				  <td class="text-center">
 				  <h6 class="text-warning" *ngIf="item?.status == 6"> Not Available</h6>
 				  <h6 class="text-success" *ngIf="item?.status == 2">Hired </h6>
 				  <h6 class="text-danger" *ngIf="item?.status == 4"> Rejected</h6>
 				  <h6 class="text-danger" *ngIf="item?.job_posting?.status == 0 && item?.status !=6 && item?.status !=2 && item?.status !=4  " > Closed JOB </h6>
-					<select *ngIf="item?.job_posting?.status != 0 && item?.status !=6 && item?.status !=2 && item?.status !=4  " class="form-control form-control-td"  (change)="onChangeStatus(item, $event?.target?.value)">
+					<select *ngIf="item?.job_posting?.status != 0 && item?.status !=6 && item?.status !=2 && item?.status !=4  " class="form-control form-control-td"  (change)="popupOpen(item, $event?.target?.value)">
 					  <option [value]="1" [selected]="item?.status == 1" *ngIf="item?.status <= 1 ">Choose</option>
 					  <option [value]="3" [selected]="item?.status == 3"  *ngIf="item?.status <= 3 " >Interview scheduled</option>
 					  <ng-container *ngIf="item?.job_posting?.screening_process?.length;">
@@ -73,8 +70,12 @@
 					  
 					</select>
 					</td>
-				  <td class="text-center text-blue"><a (click)="openMessagePopup(item)"><i class="fas fa-file-alt"></i></a></td> 
-				  <!-- <td class="text-center"><a  class="text-danger"><i class="fas fa-trash-alt"></i></a></td>  -->
+				  <td class="text-center text-blue"><a class="poin" (click)="openMessagePopup(item)"><i class="fas fa-file-alt"></i></a></td> 
+				  <td class="text-center" *ngIf="validateStatus(item) == false && item?.invite_status != true && this.employeeValue['privacy_protection'] ['invite_url'] == true && item?.status !=6 && item?.status !=5 && item?.status !=2 && item?.status !=4 && item?.status !=1 " (click)="openMessagePopupInviteLink(item,item?.status)"><a  class="text-green poin" ><i class="fas fa-envelope-open-text"></i></a></td>
+				  <td class="text-center" *ngIf="(validateStatus(item) == true  )&& this.employeeValue['privacy_protection'] ['invite_url'] == true && item?.status !=6 && item?.status !=5 &&item?.status !=1 && item?.status !=2 && item?.status !=4 "><a  class="text-danger poin"><i class="fas fa-envelope"></i></a></td>
+				  <td class="text-center" *ngIf="(validateStatus(item) == false && item?.invite_status == true )&& this.employeeValue['privacy_protection'] ['invite_url'] == true && item?.status !=6 && item?.status !=1 &&item?.status !=5 && item?.status !=2 && item?.status !=4 "><a   (click)="openReschedulePopup(item,item?.status)" class="text-warning poin"><i class="fas fa-envelope"></i></a></td>
+				  <td class="text-center" *ngIf="this.employeeValue['privacy_protection'] ['invite_url'] != true || item?.status ==5 ||item?.status ==6 || item?.status ==2 || item?.status ==4|| item?.status ==1 "><a  class="text-danger poin-no"><i class="fas fa-comment-slash"></i></a></td>
+				  <td class="text-center" ><a  (click)="openHistoryPopup(item)" class="text-danger poin"><i class="fas fa-history"></i></a></td>
                 </tr>
               </ng-container>
               <ng-template #elseTemplate>
@@ -96,6 +97,169 @@
     </div>
   </div>
 </section>
+
+<ng-template *ngIf="isOpenInviteUrl" #InviteModel let-modal>
+	<div class="modal-header">
+			<!-- <h5 class="modal-title" id="exampleModalLabels">{{"common.inviteLink" | translate}}</h5> -->
+		</div>
+		<div class="modal-body"  >
+			
+			<mat-radio-group *ngIf="showInput !=true"
+			  aria-labelledby="example-radio-group-label"
+			  class="example-radio-group"
+			  (change)="checkChange($event)">
+			  <mat-radio-button style="display:contents" class="example-radio-button" *ngFor="let item of employeeValue?.profile?.invite_urls;let i=index;" value="{{item?.url}}_{{i}}">
+				<h6 style="margin-bottom: 0.5px !important;">{{item.title}}</h6> {{item.url}}
+			  </mat-radio-button>
+			</mat-radio-group>
+				
+			<div class="mt-3">
+				<h6 class="text-green poin" (click)="enableInput()"> Send custom invite link</h6>
+				
+				<div class="form-group" *ngIf="showInput ==true">
+					<input type="text" class="form-control " name="inviteUrlLink" id ="inviteUrlLink" [(ngModel)]="inviteUrlLink">
+				</div>
+			
+			</div>
+		
+		</div>
+		<div class="modal-footer">			
+			<button  (click)="closePopup()" type="button" class="btn btn-secondary" >
+				{{"shared.close" | translate }}
+			</button>	
+			<button [disabled]="inviteUrlLink.trim() =='' || inviteUrlLink ==null "  (click)="closeSave()"  type="button" class="btn btn-theme-blue">
+				{{"shared.send" | translate }}
+			</button>	
+		</div>
+</ng-template>
+
+<ng-template *ngIf="isResendURL" #ResendURLModel let-modal>
+	<div class="modal-header">
+			<h5 class="modal-title" id="exampleModalLabels">{{"shared.resend" | translate }} {{"common.inviteLink" | translate}}</h5>
+		</div>
+		<div class="modal-body"  >
+			<div class="mt-3">				
+				<div class="form-group" >
+					<input type="text" class="form-control " readonly name="inviteUrlLink" id ="inviteUrlLink" [(ngModel)]="inviteUrlLink">
+				</div>			
+			</div>
+		
+		</div>
+		<div class="modal-footer">			
+			<button  (click)="closePopupResend()" type="button" class="btn btn-secondary" >
+				{{"shared.close" | translate }}
+			</button>	<button [disabled]="inviteUrlLink.trim() =='' || inviteUrlLink ==null || inviteUrlLink.trim().split('/')[2] !=  'calendly.com' " (click)="closeSaveResend()" type="button" class="btn btn-theme-blue">
+				{{"shared.resend" | translate }}
+			</button>	
+		</div>
+</ng-template>
+
+<ng-template *ngIf="isOpenHistory" #HistoryModel let-modal>
+	<div class="modal-header">
+			<h5 class="modal-title" id="exampleModalLabels">{{"common.history" | translate}}</h5>
+			<button type="button" class="close" (click)="closePopupHistory()">
+				<span aria-hidden="true">×</span>
+			</button>
+		</div>
+		<div class="modal-body"  >
+			
+			<div  >
+				<div class="row">
+				<div class="col-md-1"> </div>
+					<div class="col-md-9 ">
+						<ul class="statusHistory">
+							<ng-container *ngFor="let items of itemsData?.application_status;let i=index;">
+								<li class="blue" *ngIf="items?.id == 1 ">
+									<div class="date">
+										<h5 class="">{{itemsData?.created_at | date: 'longDate' }}</h5>
+									</div>
+									<div class="icon">
+										<i class="fas fa-file-alt"></i>
+									</div>
+									<div class="content">
+										<h4>Applied JOB</h4>
+									</div>
+								</li>
+								<li class="success" *ngIf="items?.id == 1 ">
+									<div class="date">
+										<h5 class="">{{items?.date | date: 'longDate' }}</h5>
+									</div>
+									<div class="icon">
+										<i class="fas fa-user-clock"></i>
+									</div>
+									<div class="content">
+										<h4>{{items?.status}}</h4>
+										<p>{{items?.comments}}</p>
+									</div>
+								</li>
+								<li class="pending" *ngIf="items?.id != '98' && items?.id != '4' && items?.id != '2' && items?.id != 1&& items?.id != '1' && items?.id != '5' && items?.id != '6'" >
+									<div class="date">
+										<h5 class="">{{items?.date | date: 'longDate' }}</h5>
+									</div>
+									<div class="icon">
+										<i class="fas fa-user-check"></i>
+									</div>
+									<div class="content">
+										<h4>{{items?.status}}</h4>
+										<p>{{items?.comments}}</p>
+										<br>
+										<h6 style="font-size: 11px;margin-bottom:5px;" *ngIf="items?.rescheduled || items?.invited || items?.created || items?.canceled">History</h6>
+										<p *ngIf="items?.invited">You have been sent the invite link on <span class="blu" >{{items?.invited | date: 'longDate' }} </span> at <span class="blu" >{{items?.invited | date: 'shortTime' }} </span> </p>
+										<p *ngIf="items?.created">Accepted the invite link on <span class="gre" >{{items?.created | date: 'longDate' }} </span> at <span class="gre" >{{items?.created | date: 'shortTime' }} </span> </p>
+										<p *ngIf="items?.canceled">Canceled the invite link on  <span class="re" >{{items?.canceled | date: 'longDate' }} </span> at <span class="re" >{{items?.canceled | date: 'shortTime' }} </span></p>
+										<p *ngIf="items?.rescheduled">Rescheduled the invite link on <span class="yel" >{{items?.rescheduled | date: 'longDate' }} </span> at <span class="yel" >{{items?.rescheduled | date: 'shortTime' }} </span></p>
+									</div>
+								</li>
+								<li class=" success" *ngIf="items?.id == '2' " >
+									<div class="date">
+										<h5 class="">{{items?.date | date: 'longDate' }}</h5>
+									</div>
+									<div class="icon">
+										<i class="fas fa-user-check"></i>
+									</div>
+									<div class="content">
+										<h4>{{items?.status}}</h4>
+										<p>{{items?.comments}}</p>
+										
+									</div>
+								</li>
+								<li class="rejected" *ngIf="items?.id == '98' ||items?.id == '5' || items?.id == '6'|| items?.id == '4' " >
+									<div class="date">
+										<h5 class="">{{items?.date | date: 'longDate' }}</h5>
+									</div>
+									<div class="icon">
+										<i class="fas fa-user-times"></i>
+									</div>
+									<div class="content">
+										<h4>{{items?.status}}</h4>
+										<p>{{items?.comments}}</p>
+										
+									</div>
+								</li>
+							</ng-container>
+							<li class="rejected" *ngIf="itemsData?.job_posting?.status == 0 || itemsData?.job_posting?.status == 3" >
+								<div class="date">
+									<h5 class="">{{items?.job_posting?.updated_at | date: 'longDate' }}</h5>
+								</div>
+								<div class="icon">
+									<i class="fas fa-user-times"></i>
+								</div>
+								<div class="content">
+									<h4>JOB CLOSED</h4>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal-footer">			
+			<button  (click)="closePopupHistory()" type="button" class="btn btn-secondary" >
+				{{"shared.close" | translate }}
+				</button>
+		</div>
+</ng-template>
+ 
 <ng-template *ngIf="isCheckModel" #checkModal let-modal>
 	<div class="modal-content">
 		<div class="modal-header">
