--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -2,9 +2,7 @@
   <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
     <div class="row">
       <div class="col-lg-5 col-md-5 col-sm-5 d-flex align-items-center">
-       <!--  <button (click)="onRedirectBack();" type="button" class="btn btn-outline-green btn-sm mr-1">
-          <i class="fas fa-arrow-left"></i>
-        </button> -->
+       
         <ol class="breadcrumb">
 		  <li class="breadcrumb-item"><a (click)="onRedirectBack();" ><i class="fas fa-chevron-circle-left my-auto mr-1"></i></a></li>
           <li class="breadcrumb-item active" aria-current="page">
@@ -23,11 +21,7 @@
   <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
     <div class="row">
       <div class="col-lg-8 col-md-8 matches-8">
-        <!-- <div class="row"> -->
-          <!-- <div class="col-lg-12 title"> -->
-            <!-- <h2>Post Job Details</small></h2> -->
-          <!-- </div> -->
-        <!-- </div>	 -->
+        
         <div class="row">
           <div class="col-lg-12">
             <div class="card job-card">
@@ -49,14 +43,31 @@
                   <div class="media-body">
                     <h6>{{postedJobsDetails?.company?.company ? postedJobsDetails?.company?.company : ''}}</h6>
                     <h6 class="text-capitalize">
-                      {{postedJobsDetails?.city ? postedJobsDetails?.city + ', ' : ''}}
-                      {{postedJobsDetails?.state ? postedJobsDetails?.state + ', ' : ''}}
+						<ng-container *ngFor="let items of postedJobsDetails?.job_locations;let i=index;">
+                      <!-- {{items?.city ? items?.city + ', ' : ''}} -->
+                      {{items?.city ? items?.city + '' : ''}}
                       <!-- {{postedJobsDetails?.zipcode ? postedJobsDetails?.zipcode + ', ' : ''}} -->
                       <span class="text-uppercase">
-                        {{postedJobsDetails?.country ? postedJobsDetails?.country : ''}}
+                        {{items?.countryshort ? items?.countryshort : ''}}
                         </span>
-
+						<span *ngIf="i != postedJobsDetails?.job_locations?.length-1">
+                        ,
+                        </span>
+						
+						</ng-container>
                     </h6>
+					<h6 class="font-weight-bold mb-2" >{{"shared.timing" | translate}} : 
+						<ng-container *ngIf="postedJobsDetails?.min ">
+							{{postedJobsDetails?.min | time}}
+						</ng-container>
+						<ng-container *ngIf="postedJobsDetails?.min && postedJobsDetails?.max  ">
+							-
+						</ng-container>
+						
+						<ng-container *ngIf="postedJobsDetails?.max ">
+							{{postedJobsDetails?.max | time}}
+						</ng-container>
+					</h6>
                   </div>
                 </div>
 				<div class="col-lg-5 col-md-5 col-sm-5" >
