--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -30,20 +30,10 @@
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-6" style="text-align: right;">
-							<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type == 0">
-								<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / hr'}}</h6>
-							</ng-container>
-							<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type ==1">
-								<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / Annual '}}</h6>
-							</ng-container>
-							<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type ==2">
-								<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / month'}}</h6>
-							</ng-container>
-							<ng-container  *ngIf="postJobForm?.value?.jobInfo?.salary_type < 0">
-								--
-							</ng-container>
 							<h6 class="text-capitalize job-cardh6">{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.remote)}} </h6>
-							<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.willing_to_relocate)}} </h6> -->
+							<ng-container *ngIf="postJobForm?.value?.jobInfo?.min && postJobForm?.value?.jobInfo?.max">
+							<h6 class="text-capitalize job-cardh6 "*ngIf="postJobForm?.value?.jobInfo?.salary_type ==6">{{"shared.workTiming" | translate}} :  {{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.remote)}} </h6>
+							</ng-container>
 						</div>
 						</div>
 					</div>
@@ -1065,17 +1055,60 @@
 			<p style="word-break: break-all;"[innerHTML]="sanitizer.bypassSecurityTrustHtml(postJobForm?.value?.jobInfo?.description)"></p>
 		</div>	
 		<div class="row mt-2">
+			<div class="col-md-6 ">
+				<h6 class="font-weight-bold mb-2" >{{"shared.jobLocation" | translate}} </h6>
+				<ng-container *ngFor="let data_location of postJobForm?.value?.jobInfo?.job_locations ">
+					<h6 class="text-capitalize job-cardh6" *ngIf="data_location?.city && data_location?.countryshort"> 
+						{{data_location?.city}} - {{data_location?.countryshort}}
+					</h6>
+				</ng-container>
+			</div>	
+			<div class="col-md-3">
+				<h6 class="font-weight-bold mb-2" >{{"shared.workTiming" | translate}} </h6>
+				
+					<h6 class="text-capitalize job-cardh6"> 
+						<ng-container *ngIf="postJobForm?.value?.jobInfo?.min ">
+							{{postJobForm?.value?.jobInfo?.min | time}}
+						</ng-container>
+						<ng-container *ngIf="postJobForm?.value?.jobInfo?.min && postJobForm?.value?.jobInfo?.max  ">
+							-
+						</ng-container>
+						
+						<ng-container *ngIf="postJobForm?.value?.jobInfo?.max ">
+							{{postJobForm?.value?.jobInfo?.max | time}}
+						</ng-container>
+					</h6>
+				
+			</div>	
+			<div class="col-md-3 ">
+				<h6 class="font-weight-bold mb-2" >{{"shared.salary" | translate}} </h6>
+				<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type == 0">
+					<h6 class="text-capitalize job-cardh6"> {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / hr'}}</h6>
+				</ng-container>
+				<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type ==1">
+					<h6 class="text-capitalize job-cardh6"> {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / Annual '}}</h6>
+				</ng-container>
+				<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type ==2">
+					<h6 class="text-capitalize job-cardh6"> {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / month'}}</h6>
+				</ng-container>
+				<ng-container  *ngIf="postJobForm?.value?.jobInfo?.salary_type < 0">
+					--
+				</ng-container>
+							
+			</div>	
+		</div>	
+		<div class="row mt-2">
 		<div class="col-md-12 mb-2">
-			<h6 class="font-weight-bold mb-2" >{{"jobs.perksBenfits" | translate}}</h6>
+			<h6 class="font-weight-bold mb-2" *ngIf="allTrue(postJobForm?.value?.jobInfo?.health_wellness) || allTrue(postJobForm?.value?.jobInfo?.paid_off)  || allTrue(postJobForm?.value?.jobInfo?.financial_benefits) || allTrue(postJobForm?.value?.jobInfo?.office_perks) ">{{"jobs.perksBenfits" | translate}}</h6>
 			<div class="d-flex" >
 				<div class="mr-5">
-					<p class="font-weight-bold mb-2">{{"jobs.healthWellness" | translate}}</p>
+					<p class="font-weight-bold mb-2" *ngIf="allTrue(postJobForm?.value?.jobInfo?.health_wellness)">{{"jobs.healthWellness" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.health_wellness.life == true" >{{"jobs.lifeInsurance" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.health_wellness.dental == true" >{{"jobs.dentalInsurance" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.health_wellness.disability == true" >{{"jobs.disabilityInsurance" | translate}}</p>
 				</div>
 				<div class="mr-5">
-					<p class="font-weight-bold mb-2">{{"jobs.paidTimeOff" | translate}}</p>
+					<p class="font-weight-bold mb-2" *ngIf="allTrue(postJobForm?.value?.jobInfo?.paid_off)">{{"jobs.paidTimeOff" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.paid_off.vacation_policy == true" >{{"jobs.vacationPolicy" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.paid_off.paid_sick_leaves == true" >{{"jobs.paidSickLeaves" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.paid_off.paid_parental_leave == true" >{{"jobs.paidParentalLeave" | translate}}</p>
@@ -1083,7 +1116,7 @@
 					
 				</div>
 				<div class="mr-5">
-					<p class="font-weight-bold mb-2">{{"jobs.financialBenefits" | translate}}</p>
+					<p class="font-weight-bold mb-2" *ngIf="allTrue(postJobForm?.value?.jobInfo?.financial_benefits)">{{"jobs.financialBenefits" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.financial_benefits.tuition_reimbursement == true" >{{"jobs.tuitionReimbursement" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.financial_benefits.corporate_plan == true" >{{"jobs.corporatePlan" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.financial_benefits.retirement_plan == true" >{{"jobs.retirementPlan" | translate}}</p>
@@ -1091,7 +1124,7 @@
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.financial_benefits.purchase_plan == true" >{{"jobs.purchasePlan" | translate}}</p>
 				</div>
 				<div class="mr-5">
-					<p class="font-weight-bold mb-2">Office Perks</p>
+					<p class="font-weight-bold mb-2" *ngIf="allTrue(postJobForm?.value?.jobInfo?.office_perks)">Office Perks</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.office_perks.telecommuting == true" >{{"jobs.teleCommuting" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.office_perks.social_outings == true" >{{"jobs.socialOutings" | translate}}</p>
 					<p class=" mb-1" *ngIf="postJobForm?.value?.jobInfo?.office_perks.free_food == true" >{{"jobs.freeFood" | translate}}</p>
@@ -1114,10 +1147,10 @@
 		<button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary"
 			data-dismiss="modal">Edit</button>
 		<button *ngIf="!postJobForm.valid || f['number_of_positions']['value'] == 0 " disabled="!postJobForm.valid || f['number_of_positions']['value'] == 0 " (click)="onRedirectDashboard(false)" type="button" class="btn btn-theme-blue">
-			{{jobId ? 'Update & Close' : 'Save & Close'}}
+			{{jobId&&!isCopy ? 'Update & Close' : 'Save & Close'}}
 		</button>
 		<button *ngIf="postJobForm.valid && f['number_of_positions']['value'] != 0 " (click)="onRedirectDashboard(false)" type="button" class="btn btn-theme-blue">
-			{{jobId ? 'Update & Close' : 'Save & Close'}}
+			{{jobId&&!isCopy ? 'Update & Close' : 'Save & Close'}}
 		</button>
 	</div>
 
