--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -29,12 +29,17 @@
 									<td>
 										{{item?.employer?.company ? item?.employer?.company : '--'}}
 									</td>
-									<td class="text-capitalize">
-										{{item?.job_posting?.city ? item?.job_posting?.city + ', ' : ''}}
-										{{item?.job_posting?.state ? item?.job_posting?.state + ', ' : ''}}
-										<span class="text-uppercase">
-											{{item?.job_posting?.country ? item?.job_posting?.country : ''}}
-										</span>
+									<td class="text-capitalize" container="body" placement="top" ngbTooltip="TH3 tooltip" >
+										<ng-container>
+											{{item?.job_posting?.job_locations[0].city ? item?.job_posting?.job_locations[0].city + ', ' : ''}}
+										  {{item?.job_posting?.job_locations[0].state ? item?.job_posting?.job_locations[0].state + ', ' : ''}}
+										  <span class="text-uppercase">
+											{{item?.job_posting?.job_locations[0].country ? item?.job_posting?.job_locations[0].country : ''}}
+										  </span>
+										   <span class="text-uppercase" style="color:blue;cursor:pointer;" *ngIf="item?.job_posting?.job_locations?.length-1 !=0" >
+											+{{item?.job_posting?.job_locations?.length-1}}
+										  </span>
+										</ng-container>
 									</td>
 									<td>
 										{{item?.created_at ? (item?.created_at | date: "MMM dd, y") : '-'}}
@@ -99,6 +104,8 @@
 																<div class="content">
 																	<h4>{{items?.status}}</h4>
 																	<p>{{items?.comments}}</p>
+																	<p  class="linksValue" (click)="openPopupViewInvite(item);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == true" [href]="items?.invite_url">Schedule the timing</p>
+																	<p  class="linksValue" (click)="openPopupViewInviteNew(item,event);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == false" [href]="items?.invite_url">Schedule the timing</p>
 																</div>
 															</li>
 															<li class="pending" *ngIf="items?.id != '98' && items?.id != '4' && items?.id != '2' && items?.id != 1&& items?.id != '1' && items?.id != '5' && items?.id != '6'" >
@@ -111,6 +118,15 @@
 																<div class="content">
 																	<h4>{{items?.status}}</h4>
 																	<p>{{items?.comments}}</p>
+																	<p  class="linksValue"  (click)="openPopupViewInvite(item);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == true" [href]="items?.invite_url">Schedule the timing</p>
+																	<p  class="linksValue"  (click)="openPopupViewInviteNew(item,event);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == false" [href]="items?.invite_url">Schedule the timing</p>
+																	<p  *ngIf="items?.id == item?.status && items?.invite_url && item?.canceled !=true && item?.invite_status != true" > <span class="linksValue cancel" (click)="openPopupViewCancel(item);"  [href]="item?.cancel_url" *ngIf="item?.cancel_url !=null ||item?.cancel_url !='' "> Cancel the {{items?.status}} </span>  -   <span  class="linksValue reschedule"  (click)="openPopupViewReschedule(item);" [href]="item?.reschedule_url"   *ngIf="item?.reschedule_url !=null ||item?.reschedule_url !='' " > Reschedule the  {{items?.status}}</span>  </p>
+																	<br>
+																	<h6 style="font-size: 11px;margin-bottom:5px;" *ngIf="items?.invited || items?.created || items?.canceled">History</h6>
+																	<p *ngIf="items?.invited">You have received invite link on <span class="blu" >{{items?.invited | date: 'longDate' }} </span> at <span class="blu" >{{items?.invited | date: 'shortTime' }} </span> </p>
+																	<p *ngIf="items?.created">Accepted the invite link on <span class="gre" >{{items?.created | date: 'longDate' }} </span> at <span class="gre" >{{items?.created | date: 'shortTime' }} </span> </p>
+																	<p *ngIf="items?.rescheduled">Rescheduled the invite link on <span class="yel" >{{items?.rescheduled | date: 'longDate' }} </span> at <span class="yel" >{{items?.rescheduled | date: 'shortTime' }} </span></p>
+																	<p *ngIf="items?.canceled">Canceled the invite link on  <span class="re" >{{items?.canceled | date: 'longDate' }} </span> at <span class="re" >{{items?.canceled | date: 'shortTime' }} </span></p>
 																</div>
 															</li>
 															<li class=" success" *ngIf="items?.id == '2' " >
@@ -123,6 +139,8 @@
 																<div class="content">
 																	<h4>{{items?.status}}</h4>
 																	<p>{{items?.comments}}</p>
+																	<p class="linksValue"   (click)="openPopupViewInvite(item);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == true" [href]="items?.invite_url">Schedule the timing</p>
+																	<p class="linksValue"   (click)="openPopupViewInviteNew(item,event);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == false" [href]="items?.invite_url">Schedule the timing</p>
 																</div>
 															</li>
 															<li class="rejected" *ngIf="items?.id == '98' ||items?.id == '5' || items?.id == '6'|| items?.id == '4' " >
@@ -135,6 +153,8 @@
 																<div class="content">
 																	<h4>{{items?.status}}</h4>
 																	<p>{{items?.comments}}</p>
+																	<p class="linksValue"  (click)="openPopupViewInvite(item);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true && items?.invite_url.includes('calendly') == true" [href]="items?.invite_url">Schedule the timing</p>
+																	<p class="linksValue"  (click)="openPopupViewInviteNew(item,event);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true && items?.invite_url.includes('calendly') == false" [href]="items?.invite_url">Schedule the timing</p>
 																</div>
 															</li>
 														</ng-container>
@@ -178,7 +198,6 @@
 	<ng-template *ngIf="toggleMatchesModal" #matchesModal let-modal let-d="dismiss">
 		<div class="modal-content">
 			<div class="modal-body text-center">
-				<!-- <h1 class="text-danger mx-auto pt-4"><i class="far fa-check-circle"></i></h1> -->
 				<h6 class="mt-3" style="font-size: 20px;">{{"shared.notAvailable" | translate}}</h6>
 			</div>
 			<div class="modal-footer">
@@ -186,6 +205,30 @@
 					<button type="button" class="btn btn-theme-blue" style="margin-right:10px;" (click)="closeMatches()"  data-dismiss="modal">{{"shared.ok" | translate}}</button>
 				</div>
 			</div>
+		</div>	
+	</ng-template>
+	<ng-template *ngIf="openBookingSite" #bookingModel let-modal let-d="dismiss">
+		<div class="modal-header">	
+			<button type="button" (click)="closeInvite()" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+		<div class="modal-content">
+			<div class="modal-body text-center checkVal" [id]="itemsIDVAL.invite_url"  *ngIf="openNotBook != true ">
+			<input style="display:none;" id="name" [value]="itemsIDVAL.user.first_name" />
+				<input style="display:none;" id="email" [value]="itemsIDVAL.user.email" />
+				<!-- <input style="display:none;" id="appid" [value]="itemsIDVAL.id" /> -->
+				<!-- Calendly inline widget begin -->
+				
+ <div #container class="calendly-inline-widget" style="min-width:320px;height:520px;" data-auto-load="false">
+ <div class="calendly-spinner"><div class="calendly-bounce1"></div><div class="calendly-bounce2"></div><div class="calendly-bounce3"></div></div>
+ </div><!-- Calendly inline widget end -->
+			</div>
+			<div class="modal-body text-center " *ngIf="openNotBook == true">
+			<iframe width="100%" height="100%" scrolling="no" id="iframeData"  #iframeData frameBorder="0" style="min-width:320px;height:520px;border:0;" [src]="url"></iframe>
+
+			</div>
+			
 		</div>	
 	</ng-template>
 </section>
