--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -52,11 +52,20 @@
 										<div class="card profile-card">
 											<div class="d-flex">
 												<div class="col-lg-8 col-md-12 job-cards">
-													<a [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id: matchingJob?.jobs?.id }"  class="text-capitalize" href="javascript:;">
+													<a [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id: matchingJob?.jobs?.id ,location_id: matchingJob?.jobs?.job_location?.id }"  class="text-capitalize" href="javascript:;">
 														<h5>{{matchingJob?.jobs?.title}} <small></small></h5>
 													</a>
 													<h6 class="mb-0 text-capitalize">
-														{{matchingJob?.jobs?.city +', ' +matchingJob?.jobs?.state+', ' +matchingJob?.jobs?.country}}
+														<!-- {{matchingJob?.jobs?.job_location?.city +', ' +matchingJob?.jobs?.job_location?.state+', ' +matchingJob?.jobs?.job_location?.country}} -->
+														<ng-container *ngFor="let items of matchingJob?.jobs?.job_locations" >
+															{{items?.city ? items?.city+', '  : ''}}
+															{{items?.state ? items?.state+', '  : ''}}
+															<span class="text-uppercase" *ngIf="!isMultipleMatches">
+															  {{items?.country ? items?.country : ''}}
+															</span><span class="text-uppercase" *ngIf="isMultipleMatches">
+															  {{items?.countryshort ? items?.countryshort : ''}}
+															</span><br>
+														</ng-container>
 														
 													</h6>
 													<h6 class="mt-1 text-capitalize">
@@ -80,7 +89,7 @@
 															<h6 *ngIf="matchingJob?.jobs?.salary_type == 1" [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''"  class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / Annual '}}</h6>
 															<h6 *ngIf="matchingJob?.jobs?.salary_type == 2" [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''"  class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / month'}}</h6>
 															<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 8rem;" *ngIf="matchingJob?.jobs?.negotiable ==true && !isMultipleMatches"> {{"shared.negotiable" | translate}}</a>
-															<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 5.2rem;left: 0rem;" *ngIf="matchingJob?.jobs?.negotiable ==true && isMultipleMatches" > {{"shared.negotiable" | translate}}</a>
+															<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 4.7rem;left: 0rem;" *ngIf="isMultipleMatches "> {{"shared.negotiable" | translate}}</a>
 															<h6 class="text-capitalize job-cardh6"  [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''"  >{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(matchingJob?.jobs?.remote)}} </h6>
 															<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(matchingJob?.jobs?.willing_to_relocate)}} </h6> -->
 														</div>
@@ -103,7 +112,8 @@
 									</div>
 									<div class="col-lg-12 info" style="text-align:end;">
 										<button type="button" *ngIf="!matchingJob?.jobs.is_job_applied"  [ngClass]="{'applied-btn-green': (matchingJob?.jobs.is_job_applied ), 'btn-outline-green': !matchingJob?.jobs.is_job_applied}" [disabled]="matchingJob?.jobs.is_job_applied " (click)="onToggleResumeSelectModals(true, matchingJob?.jobs)" class="btn btn-outline-green ml-auto" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.apply" | translate}}</button>
-										<button type="button" *ngIf="matchingJob?.jobs.is_job_applied" [disabled]="matchingJob?.jobs.is_job_applied " (click)="onToggleResumeSelectModals(true, matchingJob?.jobs)" class="btn btn-outline-green ml-auto applied-btn-green" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.applied" | translate}} </button>
+										<button type="button" *ngIf="matchingJob?.jobs.is_job_applied && matchingJob?.jobs?.job_application?.status != 2 " [disabled]="matchingJob?.jobs.is_job_applied " (click)="onToggleResumeSelectModals(true, matchingJob?.jobs)" class="btn btn-outline-green ml-auto applied-btn-green" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.applied" | translate}} </button>
+										<button type="button" *ngIf="matchingJob?.jobs?.job_application?.status == 2 " [disabled]="matchingJob?.jobs.is_job_applied " class="btn btn-outline-green ml-auto applied-btn-green" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> {{"shared.hired" | translate}} </button>
 									</div>
 								</div>
 							</div>
@@ -114,16 +124,25 @@
 										<div class="card profile-card">
 											<div class="d-flex">
 												<div class="col-lg-8  job-cards">
-													<a  [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id: matchingJobNew?.jobs?.id }" class="text-capitalize" href="javascript:;">
+													<a  [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id: matchingJobNew?.jobs?.id ,location_id: matchingJobNew?.jobs?.job_location?.id }" class="text-capitalize" href="javascript:;">
 														<h5>{{matchingJobNew?.jobs?.title}} <small></small></h5>
 													</a>
 													<h6 class="mb-0 text-capitalize">
-														{{matchingJobNew?.jobs?.city +', ' +matchingJobNew?.jobs?.state+', ' +matchingJobNew?.jobs?.country}}
+														<!-- {{matchingJobNew?.jobs?.job_location?.city +', ' +matchingJobNew?.jobs?.job_location?.state+', ' +matchingJobNew?.jobs?.job_location?.country}} -->
 														<!-- {{matchingJobNew?.jobs?.city ? matchingJobNew?.jobs?.city : ''}}
 														{{matchingJobNew?.jobs?.state ? ', ' + matchingJobNew?.jobs?.state : ''}}
 														<span class="text-uppercase">
 														  {{matchingJobNew?.jobs?.country ? ', ' + matchingJobNew?.jobs?.country : ''}}
 														</span> -->
+														<ng-container *ngFor="let items of matchingJobNew?.jobs?.job_locations" >
+															{{items?.city ? items?.city+', '  : ''}}
+															{{items?.state ? items?.state+', '  : ''}}
+															<span class="text-uppercase" *ngIf="!isMultipleMatches">
+															  {{items?.country ? items?.country : ''}}
+															</span><span class="text-uppercase" *ngIf="isMultipleMatches">
+															  {{items?.countryshort ? items?.countryshort : ''}}
+															</span><br>
+														</ng-container>
 													</h6>
 													<h6 class="mt-1 text-capitalize">
 														{{matchingJobNew?.jobs?.company_name }}
@@ -143,7 +162,7 @@
 															<h6 *ngIf="matchingJobNew?.jobs?.salary_type == 1"  [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''" class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJobNew?.jobs?.salary_currency)?.symbol + matchingJobNew?.jobs?.salary + ' / Annual '}}</h6>
 															<h6 *ngIf="matchingJobNew?.jobs?.salary_type == 2"  [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''" class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJobNew?.jobs?.salary_currency)?.symbol + matchingJobNew?.jobs?.salary + ' / month'}}</h6>
 															<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 8rem;" *ngIf="matchingJobNew?.jobs?.negotiable ==true && !isMultipleMatches"> {{"shared.negotiable" | translate}}</a>
-															<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 5.2rem;left: 0rem;" *ngIf="matchingJobNew?.jobs?.negotiable ==true && isMultipleMatches"> {{"shared.negotiable" | translate}}</a>
+															<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 4.7rem;left: 0rem;" *ngIf="matchingJobNew?.jobs?.negotiable ==true && isMultipleMatches"> {{"shared.negotiable" | translate}}</a>
 															<h6 class="text-capitalize job-cardh6"  [ngClass]="(isMultipleMatches === true)?'isMatchesViewFont':''"  >{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(matchingJobNew?.jobs?.remote)}} </h6>
 															<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(matchingJobNew?.jobs?.willing_to_relocate)}} </h6> -->
 														</div>
@@ -164,7 +183,8 @@
 									</div>
 									<div class="col-lg-12 info" style="text-align:end;">
 										<button type="button"   *ngIf="!matchingJobNew?.jobs.is_job_applied "  [ngClass]="{'applied-btn-green': (matchingJobNew?.jobs.is_job_applied ), 'btn-outline-green': !matchingJobNew?.jobs.is_job_applied}" [disabled]="matchingJobNew?.jobs.is_job_applied " (click)="onToggleResumeSelectModals(true, matchingJobNew?.jobs)" class="btn btn-outline-green ml-auto" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.apply" | translate}}</button>
-										<button type="button"  *ngIf="matchingJobNew?.jobs.is_job_applied " [disabled]="matchingJobNew?.jobs.is_job_applied "  class="btn btn-outline-green ml-auto applied-btn-green" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.applied" | translate}}</button>
+										<button type="button"  *ngIf="matchingJobNew?.jobs.is_job_applied && matchingJobNew?.jobs?.job_application?.status != 2 " [disabled]="matchingJobNew?.jobs.is_job_applied "  class="btn btn-outline-green ml-auto applied-btn-green" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.applied" | translate}}</button>
+										<button type="button"  *ngIf="matchingJobNew?.jobs.is_job_applied && matchingJobNew?.jobs?.job_application?.status == 2 " [disabled]="matchingJobNew?.jobs.is_job_applied "  class="btn btn-outline-green ml-auto applied-btn-green" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.hired" | translate}} </button>
 									</div>
 								</div>
 							</div>
