--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -33,8 +33,9 @@
 											</a>
 										</div>
 										<div class="float-right" *ngIf="item?.status == 1 || item?.is_job_applied ">
-											<button [ngClass]="{'applied-btn-green': (item?.is_job_applied ), 'btn-outline-green': !item?.is_job_applied}" [disabled]="item?.is_job_applied " type="button" class="btn btn-sm" (click)="onToggleResumeSelectModals(true, item)"> <i class="fas fa-check"></i>
-												<a *ngIf="item?.is_job_applied" style="color: #fff;">{{"shared.applied" | translate}} </a>
+											<button [ngClass]="{'applied-btn-green': (item?.is_job_applied ), 'btn-outline-green': !item?.is_job_applied}" [disabled]="item?.is_job_applied " type="button" class="btn btn-sm" (click)="onToggleResumeSelectModals(true, item)"> <i class="fas fa-check"  *ngIf="item?.job_application?.status != 2"></i>
+												<a *ngIf="item?.job_application?.status == 2" style="color: #fff;">{{"shared.hired" | translate}} </a>
+												<a *ngIf="item?.is_job_applied && item?.job_application?.status != 2" style="color: #fff;">{{"shared.applied" | translate}} </a>
 												<a *ngIf="!item?.is_job_applied" >{{"shared.applyNow" | translate}} </a>
 											</button>
 										</div>
@@ -45,11 +46,18 @@
 												{{item?.company?.company}}
 											</h6>
 											<h6 class="text-capitalize">
-												{{item?.city ? item?.city + ', ' : ''}}
-												{{item?.state ? item?.state + ', ' : ''}}
+												<ng-container *ngFor="let items of item?.job_locations" >
+													{{items?.city ? items?.city+', '  : ''}}
+													{{items?.state ? items?.state+', '  : ''}}
+													<span class="text-uppercase">
+													  {{items?.country ? items?.country : ''}}
+													</span><br>
+												</ng-container>
+												<!-- {{item?.job_location?.city ? item?.job_location?.city + ', ' : ''}}
+												{{item?.job_location?.state ? item?.job_location?.state + ', ' : ''}}
 												<span >
-													{{item?.country ? item?.country : ''}}
-												</span>
+													{{item?.job_location?.country ? item?.job_location?.country : ''}}
+												</span> -->
 											</h6>
 											<h6>
 												<span *ngIf="item?.experience ==0 || !item?.experience ">Entry level</span>
