--- a/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
+++ b/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
@@ -1,6 +1,6 @@
 
 <section class="section login-section">
-  <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'">
+  <div [ngClass]="(screenWidth >= 1500)?'container':'container'">
     <div class="row">
       <div class="col-xl-8 col-lg-8 col-md-12 d-none d-lg-block d-xl-block pt-4 pr-5">
         <div style="position:absolute; right:5px;"><img src="assets/images/sapw-newbanner-global-img.png" class="img-fluid" ></div>
